# Audit-code

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  DEPLOY.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
backend/app/: main.py
backend/app/adapters/: __init__.py  erp.py  notification.py  references.py
backend/app/admin/: service.py
backend/app/agents/: __init__.py  casador.py  investigator.py  llm.py  narrador.py  onboarding_agent.py  service.py  triador.py
backend/app/alerts/: email.py
backend/app/api/: deps.py  routes_admin.py  routes_agents.py  routes_auth.py  routes_billing.py  routes_disputes.py  routes_findings.py  routes_onboarding.py  routes_reports.py  routes_upload.py  schemas.py
backend/app/billing/: service.py
backend/app/calibration/: __init__.py  service.py
backend/app/canonical/: __init__.py  document.py  mappers.py
backend/app/connectors/: __init__.py  base.py  http.py  ingest.py
backend/app/core/: config.py  crypto.py  db.py  errors.py  logging.py  metrics.py  money.py  secrets.py  security.py  timeutils.py
backend/app/etl/: sinapi.py
backend/scripts/: bootstrap_plans.py  bootstrap_roles.py  ceis_check.py  make_admin.py  seed_synthetic.py  sienge_check.py  sync_alumbra.py
backend/tests/: conftest.py  test_admin.py  test_agents_pure.py  test_app_smoke.py  test_billing.py  test_citations.py  test_connector_sienge.py  test_disputes.py  test_gainshare.py  test_integrity_parse.py  test_isolation.py  test_multicountry.py  test_nfe_parse.py  test_nfse.py  test_reference_provider.py  test_rules_e2e.py  test_sienge_transform.py  test_spreadsheet.py  test_squad.py  test_squad_events.py  test_squad_runner.py  test_stripe_billing.py  test_upload_retention.py
(+156 files in other folders)
