[project]
name = "audit-backend"
version = "0.1.0"
description = "Plataforma de auditoria contínua de gastos e integridade — backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic[email]>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "pgvector>=0.2.5",
    "redis>=5.0",
    "rq>=1.16",
    "apscheduler>=3.10",
    "httpx>=0.27",
    "structlog>=24.1",
    "argon2-cffi>=23.1",
    "pyjwt>=2.8",
    "tenacity>=8.2",
    "anthropic>=0.40",
    "python-multipart>=0.0.9",
    "prometheus-client>=0.20",
    "cryptography>=42.0",
    "defusedxml>=0.7",
    "openpyxl>=3.1",
    "stripe>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.9",
    "respx>=0.21",
    "freezegun>=1.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
# B008: Depends()/Query() em default é o padrão idiomático do FastAPI.
# E501: comprimento de linha é delegado ao ruff format (sobram só strings/URLs longas).
ignore = ["B008", "E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# garante que app/ e scripts/ sejam importáveis (rodando `pytest` puro, como no CI)
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
